Fix SlideSelector visibility when viewport is smaller than the slider

--- a/frontend/app/components/styled/SlideSelector.module.sass
+++ b/frontend/app/components/styled/SlideSelector.module.sass
@@ -2,6 +2,7 @@
 
 .container
     position: relative
+    overflow: hidden
     width: 100%
     height: 32px
 
